[build-system]
requires = ["setuptools>=42", "wheel", "pip>=24.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot_resume"
version = "0.1.0"
description = "Streamlit app for resume-based chatbot using LangChain and Qdrant"
authors = [{ name = "Hadi", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    "streamlit>=1.28,<2.0",
    "pandas>=1.5,<2.1",
    "tiktoken>=0.5,<0.6",
    "langchain-community==0.0.38",
    "langchain-text-splitters==0.3.11",
    "langchain-core>=0.1.52,<0.2.0",
    "qdrant-client>=1.6,<2.0",
    "python-dotenv>=1.0,<1.1",
    "scikit-learn>=1.3,<1.7"
]

[project.optional-dependencies]
dev = [
    "black>=23.0,<24.0",
    "isort>=5.12,<6.0",
    "mypy>=1.6,<2.0"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
